cabal-version: 2.4
name: hledger-statement
version: 0.1.0.0
build-type: Simple

executable hledger-statement
  main-is: Main.hs
  hs-source-dirs: .
  build-depends:
      base >= 4.7 && < 5,
      hledger-lib,
      hledger,
      text,
      containers,
      lucid,
      time,
      cmdargs,
      extra,
      data-default
  default-language: Haskell2010
